# steamboard

./: .gitignore  README.md  SECURITY.md  deno.json  index.html  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: build.yml
src/: App.vue  countries.json  main.ts  reset.scss  style.scss  utils.js
src-tauri/: Cargo.toml  Info.plist  steamboard.sql  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/logo.icon/: icon.json
src-tauri/src/: app.rs  database.rs  main.rs  steam.rs
src/assets/: earth.glb
src/components/: Alert.vue  Hint.vue  Icon.vue  Loading.vue  Settings.vue  Toolbar.vue  Update.vue  Waves.vue  Widget.vue
src/router/: Decrypting.vue  Export.vue  Home.vue  Overview.vue  Welcome.vue  World.vue  router.ts
src/stores/: options.ts  settings.ts  updater.ts
src/widgets/: RecentSales.vue  Revenue.vue  TopPackages.vue  UnitSold.vue
