[package]
name = "Steamboard"
homepage = "https://steamboard.app"
description = "Steamboard, own your Steam sales data"
authors = ["Fatfish Lab", "Bubblebird Studio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [ "tray-icon", "image-png" ] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-http = "2.5.1"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-os = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-fs = "2.4.1"
tauri-plugin-log = "2.6.0"

serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.142"
dotenv = "0.15.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
tokio-rusqlite = "0.6.0"
once_cell = "1.21.3"
csv = "1.3.1"
arboard = "3.6.0"
futures = "0.3.31"
serde_with = "3.14.0"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
rand = "0.9.2"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "linux-native"] }
log = "0.4.27"
directories = "6.0.0"
tauri-plugin-notification = "2.3.0"

[dev-dependencies]
cargo-bump = "1.1.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.3.2"
